--- a/stats/templates/stats/user_ranking.html
+++ b/stats/templates/stats/user_ranking.html
@@ -11,31 +11,130 @@
         <link rel="stylesheet" href={% static "tigacrafting/jquery-ui/jquery-ui.css" %}>
         <link rel="stylesheet" href={% static "stats/css/user_ranking.css" %}>
         <link rel="stylesheet" href={% static "stats/datatables.min.css" %}>
+        <style>
+            .content{
+                padding: 5px;
+            }
+
+            @keyframes blink {
+              50% {
+                opacity: 0.0;
+              }
+            }
+            @-webkit-keyframes blink {
+              50% {
+                opacity: 0.0;
+              }
+            }
+            .blink {
+              animation: blink 1s step-start 0s infinite;
+              -webkit-animation: blink 1s step-start 0s infinite;
+            }
+
+            @keyframes shadow-pulse
+            {
+             0% {
+              box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.2);
+             }
+             100% {
+              box-shadow: 0 0 0 35px rgba(0, 0, 0, 0);
+             }
+            }
+
+            @keyframes shadow-mini-pulse
+            {
+             0% {
+              box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.2);
+             }
+             100% {
+              box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+             }
+            }
+
+            .pulse{
+                animation: shadow-pulse 1s infinite;
+                animation-duration: 3s;
+            }
+
+            .mini-pulse{
+                animation: shadow-mini-pulse 1s infinite;
+                animation-duration: 3s;
+            }
+
+            .badge-large {
+                font-size: 16px;
+            }
+
+            .badge-error {
+              background-color: #b94a48;
+            }
+            .badge-warning {
+              background-color: #f89406;
+            }
+            .badge-success {
+              background-color: #468847;
+            }
+            .badge-info {
+              background-color: #3a87ad;
+            }
+            .badge-inverse {
+              background-color: #333333;
+            }
+        </style>
 
         <script src={% static "tigacrafting/jquery/1.8.3/jquery-1.8.3.min.js" %}></script>
         <script src={% static "tigacrafting/jquery-ui/jquery-ui.min.js" %}></script>
         <script src={% static "stats/user_ranking.js" %}></script>
         <script src={% static "stats/datatables.min.js" %}></script>
-        <script src={% static "stats/user_ranking.js" %}></script>
+        <script src={% static "stats/cookies.js" %}></script>
+        <script src={% static "stats/csrf_utils.js" %}></script>
     </head>
     <body>
         <div class="container">
-            <table id="datatable" class="table table-dark">
-                <thead>
-                    <th scope="col">Rank</th>
-                    <th scope="col">User id</th>
-                    <th scope="col">Score</th>
-                </thead>
-                <tbody>
-                {% for row in data %}
-                    <tr>
-                        <td>{{ row.rank }}</td>
-                        <td>{{ row.user_uuid }}</td>
-                        <td>{{ row.score_v2 }}</td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
+            <button id="scroll_to_me" type="button" class="btn btn-primary">Show my position</button>
+            <div class="row content">
+                <div class="col-xs-1">Rank#</div>
+                <div class="col-xs-10">User</div>
+                <div class="col-xs-1">Score</div>
+            </div>
+            <hr>
+            {% for row in data %}
+            <div id="{{ row.user_uuid }}" class="row content clickable">
+                <div class="col-xs-1"><span class="badge badge-info badge-large">{{ row.rank }}</span></div>
+                <div class="col-xs-10">{{ row.user_uuid }}</div>
+                <div class="col-xs-1"><span class="badge badge-info badge-large">{{ row.score_v2 }}</span></div>
+            </div>
+            <div id="hidden_{{ row.user_uuid }}" class="row content info" style="display:none;">
+                <div class="col-xs-offset-1 col-xs-11">
+                    <div id="progress_{{ row.user_uuid }}" class="row loading">Loading data ...</div>
+                    <div id="detail_{{ row.user_uuid }}">
+                        <!--
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="row">
+                                    <div class="col-xs-3">Joined</div><div class="col-xs-6"></div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-xs-3">Last active</div><div class="col-xs-6"></div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="row">
+                                    <div class="col-xs-3">Adult reports</div><div class="col-xs-6"></div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-xs-3">Bite reports</div><div class="col-xs-6"></div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-xs-3">Site reports</div><div class="col-xs-6"></div>
+                                </div>
+                            </div>
+                        </div>
+                        -->
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
         </div>
     </body>
 </html>
