--- a/stats/templates/stats/user_ranking.html
+++ b/stats/templates/stats/user_ranking.html
@@ -80,6 +80,21 @@
             .badge-inverse {
               background-color: #333333;
             }
+            .size-1 {
+              font-size: 14px;
+            }
+            .size-2 {
+              font-size: 16px;
+            }
+            .size-3 {
+              font-size: 18px;
+            }
+            .size-4 {
+              font-size: 20px;
+            }
+            .size-5 {
+              font-size: 22px;
+            }
         </style>
 
         <script src={% static "tigacrafting/jquery/1.8.3/jquery-1.8.3.min.js" %}></script>
@@ -92,16 +107,18 @@
     <body>
         <div class="container">
             <button id="scroll_to_me" type="button" class="btn btn-primary">Show my position</button>
-            <div class="row content">
+            <div class="row content size-5">
                 <div class="col-xs-1">Rank#</div>
-                <div class="col-xs-10">User</div>
+                <div class="col-xs-5">User</div>
+                <div class="col-xs-5">Overall class</div>
                 <div class="col-xs-1">Score</div>
             </div>
             <hr>
             {% for row in data %}
-            <div id="{{ row.user_uuid }}" class="row content clickable">
+            <div id="{{ row.user_uuid }}" class="row content clickable size-{{ row.class.value }}">
                 <div class="col-xs-1"><span class="badge badge-info badge-large">{{ row.rank }}</span></div>
-                <div class="col-xs-10">{{ row.user_uuid }}</div>
+                <div class="col-xs-5"><img src="{{ row.identicon }}" height="100px"></div>
+                <div class="col-xs-5">{{ row.class.label }}</div>
                 <div class="col-xs-1"><span class="badge badge-info badge-large">{{ row.score_v2 }}</span></div>
             </div>
             <div id="hidden_{{ row.user_uuid }}" class="row content info" style="display:none;">
@@ -134,6 +151,7 @@
                     </div>
                 </div>
             </div>
+            <hr>
             {% endfor %}
         </div>
     </body>
