Tweaks to user ranking

--- a/stats/templates/stats/user_ranking.html
+++ b/stats/templates/stats/user_ranking.html
@@ -149,6 +149,7 @@
                         </div>
                         -->
                     </div>
+                    <a href={% url "stats_user_score" row.user_uuid %} target="_blank">link!</a>
                 </div>
             </div>
             <hr>
