--- a/stats/templates/stats/user_ranking.html
+++ b/stats/templates/stats/user_ranking.html
@@ -81,19 +81,23 @@
               background-color: #333333;
             }
             .size-1 {
-              font-size: 14px;
+              font-size: 8px;
             }
             .size-2 {
-              font-size: 16px;
+              font-size: 10px;
             }
             .size-3 {
-              font-size: 18px;
+              font-size: 12px;
             }
             .size-4 {
-              font-size: 20px;
+              font-size: 14px;
             }
             .size-5 {
-              font-size: 22px;
+              font-size: 16px;
+            }
+            .controls {
+                padding: 10px;
+                margin: 10px;
             }
         </style>
 
@@ -106,23 +110,38 @@
     </head>
     <body>
         <div class="container">
+            <div class="row content controls">
+                {{ pagination.start }} - {{ pagination.end }} of {{ pagination.total }}
+                <a href="{% url 'stats_user_ranking' page=pagination.first %}" class="btn btn-primary {% if pagination.page == 1 %}disabled{% endif %}">|<</a>
+                {% if pagination.previous %}
+                    <a href="{% url 'stats_user_ranking' page=pagination.previous %}" class="btn btn-primary"><</a>
+                {% else %}
+                    <a href="#" class="btn btn-primary disabled"><</a>
+                {% endif %}
+                {% if pagination.next %}
+                    <a href="{% url 'stats_user_ranking' page=pagination.next %}" class="btn btn-primary">></a>
+                {% else %}
+                    <a href="#" class="btn btn-primary disabled">></a>
+                {% endif %}
+                <a href="{% url 'stats_user_ranking' page=pagination.last %}" class="btn btn-primary {% if pagination.page == pagination.last %}disabled{% endif %}">>|</a>
+            </div>
             <button id="scroll_to_me" type="button" class="btn btn-primary">Show my position</button>
             <div class="row content size-5">
-                <div class="col-xs-1">Rank#</div>
-                <div class="col-xs-5">User</div>
+                <div class="col-xs-2">Rank#</div>
+                <div class="col-xs-3">User</div>
                 <div class="col-xs-5">Overall class</div>
-                <div class="col-xs-1">Score</div>
+                <div class="col-xs-2">Score</div>
             </div>
             <hr>
             {% for row in data %}
-            <div id="{{ row.user_uuid }}" class="row content clickable size-{{ row.class.value }}">
-                <div class="col-xs-1"><span class="badge badge-info badge-large">{{ row.rank }}</span></div>
-                <div class="col-xs-5"><img src="{{ row.identicon }}" height="100px"></div>
+            <div id="{{ row.user_uuid }}" class="row content clickable size-4">
+                <div class="col-xs-2"><span class="badge badge-info">{{ row.rank }}</span></div>
+                <div class="col-xs-3"><img src="{{ row.identicon }}" height="35px"></div>
                 <div class="col-xs-5">{{ row.class.label }}</div>
-                <div class="col-xs-1"><span class="badge badge-info badge-large">{{ row.score_v2 }}</span></div>
+                <div class="col-xs-2"><span class="badge badge-info">{{ row.score_v2 }}</span></div>
             </div>
             <div id="hidden_{{ row.user_uuid }}" class="row content info" style="display:none;">
-                <div class="col-xs-offset-1 col-xs-11">
+                <div class="col-xs-12">
                     <div id="progress_{{ row.user_uuid }}" class="row loading">Loading data ...</div>
                     <div id="detail_{{ row.user_uuid }}">
                         <!--
@@ -154,6 +173,22 @@
             </div>
             <hr>
             {% endfor %}
+        <div class="row content controls">
+            {{ pagination.start }} - {{ pagination.end }} of {{ pagination.total }}
+            <a href="{% url 'stats_user_ranking' page=pagination.first %}" class="btn btn-primary {% if pagination.page == 1 %}disabled{% endif %}">|<</a>
+            {% if pagination.previous %}
+                <a href="{% url 'stats_user_ranking' page=pagination.previous %}" class="btn btn-primary"><</a>
+            {% else %}
+                <a href="#" class="btn btn-primary disabled"><</a>
+            {% endif %}
+            {% if pagination.next %}
+                <a href="{% url 'stats_user_ranking' page=pagination.next %}" class="btn btn-primary">></a>
+            {% else %}
+                <a href="#" class="btn btn-primary disabled">></a>
+            {% endif %}
+            <a href="{% url 'stats_user_ranking' page=pagination.last %}" class="btn btn-primary {% if pagination.page == pagination.last %}disabled{% endif %}">>|</a>
+        </div>
+        <button type="button" class="btn btn-primary">Show my position</button>
         </div>
     </body>
 </html>
