--- a/stats/templates/stats/user_ranking.html
+++ b/stats/templates/stats/user_ranking.html
@@ -84,16 +84,16 @@
               font-size: 8px;
             }
             .size-2 {
-              font-size: 10px;
+              font-size: 9px;
             }
             .size-3 {
-              font-size: 12px;
+              font-size: 10px;
             }
             .size-4 {
-              font-size: 14px;
+              font-size: 12px;
             }
             .size-5 {
-              font-size: 16px;
+              font-size: 14px;
             }
             .controls {
                 padding: 10px;
@@ -112,20 +112,22 @@
         <div class="container">
             <div class="row content controls">
                 {{ pagination.start }} - {{ pagination.end }} of {{ pagination.total }}
-                <a href="{% url 'stats_user_ranking' page=pagination.first %}" class="btn btn-primary {% if pagination.page == 1 %}disabled{% endif %}">|<</a>
+                <a href="{% url 'stats_user_ranking' page=pagination.first %}" class="btn btn-primary btn-sm {% if pagination.page == 1 %}disabled{% endif %}">|<</a>
                 {% if pagination.previous %}
-                    <a href="{% url 'stats_user_ranking' page=pagination.previous %}" class="btn btn-primary"><</a>
+                    <a href="{% url 'stats_user_ranking' page=pagination.previous %}" class="btn btn-primary btn-sm"><</a>
                 {% else %}
-                    <a href="#" class="btn btn-primary disabled"><</a>
+                    <a href="#" class="btn btn-primary btn-sm disabled"><</a>
                 {% endif %}
                 {% if pagination.next %}
-                    <a href="{% url 'stats_user_ranking' page=pagination.next %}" class="btn btn-primary">></a>
+                    <a href="{% url 'stats_user_ranking' page=pagination.next %}" class="btn btn-primary btn-sm">></a>
                 {% else %}
-                    <a href="#" class="btn btn-primary disabled">></a>
+                    <a href="#" class="btn btn-primary btn-sm disabled">></a>
                 {% endif %}
-                <a href="{% url 'stats_user_ranking' page=pagination.last %}" class="btn btn-primary {% if pagination.page == pagination.last %}disabled{% endif %}">>|</a>
+                <a href="{% url 'stats_user_ranking' page=pagination.last %}" class="btn btn-primary  btn-sm {% if pagination.page == pagination.last %}disabled{% endif %}">>|</a>
             </div>
-            <button id="scroll_to_me" type="button" class="btn btn-primary">Show my position</button>
+            <div class="row content">
+                <button id="scroll_to_me" type="button" class="btn btn-primary btn-sm">My position</button>
+            </div>
             <div class="row content size-5">
                 <div class="col-xs-2">Rank#</div>
                 <div class="col-xs-3">User</div>
@@ -175,20 +177,22 @@
             {% endfor %}
         <div class="row content controls">
             {{ pagination.start }} - {{ pagination.end }} of {{ pagination.total }}
-            <a href="{% url 'stats_user_ranking' page=pagination.first %}" class="btn btn-primary {% if pagination.page == 1 %}disabled{% endif %}">|<</a>
+            <a href="{% url 'stats_user_ranking' page=pagination.first %}" class="btn btn-primary btn-sm {% if pagination.page == 1 %}disabled{% endif %}">|<</a>
             {% if pagination.previous %}
-                <a href="{% url 'stats_user_ranking' page=pagination.previous %}" class="btn btn-primary"><</a>
+                <a href="{% url 'stats_user_ranking' page=pagination.previous %}" class="btn btn-primary btn-sm"><</a>
             {% else %}
-                <a href="#" class="btn btn-primary disabled"><</a>
+                <a href="#" class="btn btn-primary btn-sm disabled"><</a>
             {% endif %}
             {% if pagination.next %}
-                <a href="{% url 'stats_user_ranking' page=pagination.next %}" class="btn btn-primary">></a>
+                <a href="{% url 'stats_user_ranking' page=pagination.next %}" class="btn btn-primary btn-sm">></a>
             {% else %}
-                <a href="#" class="btn btn-primary disabled">></a>
+                <a href="#" class="btn btn-primary btn-sm disabled">></a>
             {% endif %}
-            <a href="{% url 'stats_user_ranking' page=pagination.last %}" class="btn btn-primary {% if pagination.page == pagination.last %}disabled{% endif %}">>|</a>
+            <a href="{% url 'stats_user_ranking' page=pagination.last %}" class="btn btn-primary  btn-sm {% if pagination.page == pagination.last %}disabled{% endif %}">>|</a>
         </div>
-        <button type="button" class="btn btn-primary">Show my position</button>
+        <div class="row content">
+            <button type="button" class="btn btn-primary btn-sm">My position</button>
         </div>
+    </div>
     </body>
 </html>
