--- a/stats/templates/stats/user_ranking.html
+++ b/stats/templates/stats/user_ranking.html
@@ -65,6 +65,10 @@
                 font-size: 16px;
             }
 
+            .mine {
+              background-color: #f7f4ab;
+            }
+
             .badge-error {
               background-color: #b94a48;
             }
@@ -110,24 +114,42 @@
     </head>
     <body>
         <div class="container">
-            <div class="row content controls">
-                {{ pagination.start }} - {{ pagination.end }} of {{ pagination.total }}
-                <a href="{% url 'stats_user_ranking' page=pagination.first %}" class="btn btn-primary btn-sm {% if pagination.page == 1 %}disabled{% endif %}">|<</a>
-                {% if pagination.previous %}
-                    <a href="{% url 'stats_user_ranking' page=pagination.previous %}" class="btn btn-primary btn-sm"><</a>
-                {% else %}
-                    <a href="#" class="btn btn-primary btn-sm disabled"><</a>
-                {% endif %}
-                {% if pagination.next %}
-                    <a href="{% url 'stats_user_ranking' page=pagination.next %}" class="btn btn-primary btn-sm">></a>
-                {% else %}
-                    <a href="#" class="btn btn-primary btn-sm disabled">></a>
-                {% endif %}
-                <a href="{% url 'stats_user_ranking' page=pagination.last %}" class="btn btn-primary  btn-sm {% if pagination.page == pagination.last %}disabled{% endif %}">>|</a>
-            </div>
-            <div class="row content">
-                <button id="scroll_to_me" type="button" class="btn btn-primary btn-sm">My position</button>
-            </div>
+            {% if user_id %}
+                <div class="row content controls">
+                    {{ pagination.start }} - {{ pagination.end }} of {{ pagination.total }}
+                    <a href="{% url 'stats_user_ranking' page=pagination.first user_uuid=user_id %}" class="btn btn-primary btn-sm {% if pagination.page == 1 %}disabled{% endif %}">|<</a>
+                    {% if pagination.previous %}
+                        <a href="{% url 'stats_user_ranking' page=pagination.previous user_uuid=user_id  %}" class="btn btn-primary btn-sm"><</a>
+                    {% else %}
+                        <a href="#" class="btn btn-primary btn-sm disabled"><</a>
+                    {% endif %}
+                    {% if pagination.next %}
+                        <a href="{% url 'stats_user_ranking' page=pagination.next user_uuid=user_id  %}" class="btn btn-primary btn-sm">></a>
+                    {% else %}
+                        <a href="#" class="btn btn-primary btn-sm disabled">></a>
+                    {% endif %}
+                    <a href="{% url 'stats_user_ranking' page=pagination.last  user_uuid=user_id %}" class="btn btn-primary  btn-sm {% if pagination.page == pagination.last %}disabled{% endif %}">>|</a>
+                </div>
+                <div class="row content">
+                    <a href="{% url 'stats_user_ranking' page=1 user_uuid=user_id %}?seek=t" class="btn btn-primary btn-sm">My position</a>
+                </div>
+            {% else %}
+                <div class="row content controls">
+                    {{ pagination.start }} - {{ pagination.end }} of {{ pagination.total }}
+                    <a href="{% url 'stats_user_ranking' page=pagination.first %}" class="btn btn-primary btn-sm {% if pagination.page == 1 %}disabled{% endif %}">|<</a>
+                    {% if pagination.previous %}
+                        <a href="{% url 'stats_user_ranking' page=pagination.previous %}" class="btn btn-primary btn-sm"><</a>
+                    {% else %}
+                        <a href="#" class="btn btn-primary btn-sm disabled"><</a>
+                    {% endif %}
+                    {% if pagination.next %}
+                        <a href="{% url 'stats_user_ranking' page=pagination.next %}" class="btn btn-primary btn-sm">></a>
+                    {% else %}
+                        <a href="#" class="btn btn-primary btn-sm disabled">></a>
+                    {% endif %}
+                    <a href="{% url 'stats_user_ranking' page=pagination.last %}" class="btn btn-primary  btn-sm {% if pagination.page == pagination.last %}disabled{% endif %}">>|</a>
+                </div>
+            {% endif %}
             <div class="row content size-5">
                 <div class="col-xs-2">Rank#</div>
                 <div class="col-xs-3">User</div>
@@ -136,7 +158,12 @@
             </div>
             <hr>
             {% for row in data %}
-            <div id="{{ row.user_uuid }}" class="row content clickable size-4">
+            {% if row.user_uuid == user_id %}
+            <div class="row content">
+                <p>This is you!</p>
+            </div>
+            {% endif %}
+            <div id="{{ row.user_uuid }}" class="row content clickable size-4 {% if row.user_uuid == user_id %} mine pulse {% endif %}">
                 <div class="col-xs-2"><span class="badge badge-info">{{ row.rank }}</span></div>
                 <div class="col-xs-3"><img src="{{ row.identicon }}" height="35px"></div>
                 <div class="col-xs-5">{{ row.class.label }}</div>
@@ -175,24 +202,42 @@
             </div>
             <hr>
             {% endfor %}
-        <div class="row content controls">
-            {{ pagination.start }} - {{ pagination.end }} of {{ pagination.total }}
-            <a href="{% url 'stats_user_ranking' page=pagination.first %}" class="btn btn-primary btn-sm {% if pagination.page == 1 %}disabled{% endif %}">|<</a>
-            {% if pagination.previous %}
-                <a href="{% url 'stats_user_ranking' page=pagination.previous %}" class="btn btn-primary btn-sm"><</a>
-            {% else %}
-                <a href="#" class="btn btn-primary btn-sm disabled"><</a>
-            {% endif %}
-            {% if pagination.next %}
-                <a href="{% url 'stats_user_ranking' page=pagination.next %}" class="btn btn-primary btn-sm">></a>
-            {% else %}
-                <a href="#" class="btn btn-primary btn-sm disabled">></a>
-            {% endif %}
-            <a href="{% url 'stats_user_ranking' page=pagination.last %}" class="btn btn-primary  btn-sm {% if pagination.page == pagination.last %}disabled{% endif %}">>|</a>
+        {% if user_id %}
+            <div class="row content controls">
+                {{ pagination.start }} - {{ pagination.end }} of {{ pagination.total }}
+                <a href="{% url 'stats_user_ranking' page=pagination.first user_uuid=user_id %}" class="btn btn-primary btn-sm {% if pagination.page == 1 %}disabled{% endif %}">|<</a>
+                {% if pagination.previous %}
+                    <a href="{% url 'stats_user_ranking' page=pagination.previous user_uuid=user_id  %}" class="btn btn-primary btn-sm"><</a>
+                {% else %}
+                    <a href="#" class="btn btn-primary btn-sm disabled"><</a>
+                {% endif %}
+                {% if pagination.next %}
+                    <a href="{% url 'stats_user_ranking' page=pagination.next user_uuid=user_id  %}" class="btn btn-primary btn-sm">></a>
+                {% else %}
+                    <a href="#" class="btn btn-primary btn-sm disabled">></a>
+                {% endif %}
+                <a href="{% url 'stats_user_ranking' page=pagination.last  user_uuid=user_id %}" class="btn btn-primary  btn-sm {% if pagination.page == pagination.last %}disabled{% endif %}">>|</a>
+            </div>
+            <div class="row content">
+                <a href="{% url 'stats_user_ranking' page=1 user_uuid=user_id %}?seek=t" class="btn btn-primary btn-sm">My position</a>
+            </div>
+        {% else %}
+            <div class="row content controls">
+                {{ pagination.start }} - {{ pagination.end }} of {{ pagination.total }}
+                <a href="{% url 'stats_user_ranking' page=pagination.first %}" class="btn btn-primary btn-sm {% if pagination.page == 1 %}disabled{% endif %}">|<</a>
+                {% if pagination.previous %}
+                    <a href="{% url 'stats_user_ranking' page=pagination.previous %}" class="btn btn-primary btn-sm"><</a>
+                {% else %}
+                    <a href="#" class="btn btn-primary btn-sm disabled"><</a>
+                {% endif %}
+                {% if pagination.next %}
+                    <a href="{% url 'stats_user_ranking' page=pagination.next %}" class="btn btn-primary btn-sm">></a>
+                {% else %}
+                    <a href="#" class="btn btn-primary btn-sm disabled">></a>
+                {% endif %}
+                <a href="{% url 'stats_user_ranking' page=pagination.last %}" class="btn btn-primary  btn-sm {% if pagination.page == pagination.last %}disabled{% endif %}">>|</a>
+            </div>
+        {% endif %}
         </div>
-        <div class="row content">
-            <button type="button" class="btn btn-primary btn-sm">My position</button>
-        </div>
-    </div>
     </body>
 </html>
