--- a/stats/templates/stats/user_ranking.html
+++ b/stats/templates/stats/user_ranking.html
@@ -135,7 +135,7 @@
                     <a href="{% url 'stats_user_ranking' page=pagination.last  user_uuid=user_id %}" class="btn btn-primary  btn-sm {% if pagination.page == pagination.last %}disabled{% endif %}">>|</a>
                 </div>
                 <div class="row content">
-                    <a href="{% url 'stats_user_ranking' page=1 user_uuid=user_id %}?seek=t" class="btn btn-primary btn-sm">My position</a>
+                    <a href="{% url 'stats_user_ranking' page=1 user_uuid=user_id %}?seek=t" class="btn btn-primary btn-sm">{% trans 'My position' %}</a>
                 </div>
             {% else %}
                 <div class="row content controls">
@@ -223,7 +223,7 @@
                 <a href="{% url 'stats_user_ranking' page=pagination.last  user_uuid=user_id %}" class="btn btn-primary  btn-sm {% if pagination.page == pagination.last %}disabled{% endif %}">>|</a>
             </div>
             <div class="row content">
-                <a href="{% url 'stats_user_ranking' page=1 user_uuid=user_id %}?seek=t" class="btn btn-primary btn-sm">My position</a>
+                <a href="{% url 'stats_user_ranking' page=1 user_uuid=user_id %}?seek=t" class="btn btn-primary btn-sm">{% trans 'My position' %}</a>
             </div>
         {% else %}
             <div class="row content controls">
