--- a/tigacrafting/static/tigacrafting/tigacrafting_style.css
+++ b/tigacrafting/static/tigacrafting/tigacrafting_style.css
@@ -299,3 +299,18 @@ ul {
     right: 8px;
 }
 
+.countryList > li > a:hover, .countryList > li > a:focus{
+    color: #262626;
+    text-decoration: none;
+    background-color: #f5f5f5;
+}
+
+.countryList > li > a {
+    display: block;
+    padding: 3px;
+    clear: both;
+    font-weight: 400;
+    line-height: 1.42857143;
+    color: #333;
+    white-space: nowrap;
+}
