Tweaks workload stats

--- a/stats/templates/stats/workload.html
+++ b/stats/templates/stats/workload.html
@@ -41,7 +41,7 @@
             <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
                 <div id="navbar" class="container">
                     <div class="navbar-brand">
-                        <span style="color:#ff9900; font-size: small">MosquitoAlert Workload Stats</span>
+                        <span style="color:#ff9900; font-size: small">MosquitoAlert Workload Stats - {{ country_name|upper }}</span>
                     </div>
                     <div class="navbar-collapse collapse">
                         <ul class="nav navbar-nav navbar-right">
