Fixed label in single report view

--- a/tigacrafting/templates/tigacrafting/single_report_view.html
+++ b/tigacrafting/templates/tigacrafting/single_report_view.html
@@ -262,7 +262,15 @@
                                                         {% endif %}
                                                     </td>
                                                     <td>
+                                                        {% if ano.user.userstat.is_superexpert %}
+                                                            {% if ano.revise == False and ano.validation_complete == True %}
+                                                                {{ ano.get_status_bootstrap | safe }} {% include "tigacrafting/score_label.html" with score=report.get_final_combined_expert_score text=report.get_final_combined_expert_category %}
+                                                            {% else %}
+                                                                {{ ano.get_status_bootstrap | safe }} {% include "tigacrafting/score_label.html" with score=ano.get_score text=ano.get_category %}
+                                                            {% endif %}
+                                                        {% else %}
                                                         {{ ano.get_status_bootstrap | safe }} {% include "tigacrafting/score_label.html" with score=ano.get_score text=ano.get_category %}
+                                                        {% endif %}
                                                     </td>
                                                 </tr>
                                                 <tr>
