--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -1635,6 +1635,11 @@
         var gear = $("#gear").hide();
 
         function background_save(qp) {
+            window.location.href = qp;
+            /* This is extremely weird and caused some reports to be unvalidated $("[id*='validation_complete']:checked").prop("checked", false);
+            and saved when changing the selector from flagged to public reports - changed because clicking these buttons should **NEVER** save
+            reports, much less mark them as not validated!*/
+            /*
             if ($("#formset_forms").length > 0 && ("{{ pending }}" == 'pending' || "{{ checked }}" == 'unchecked')) {
                 $("[id*='validation_complete']:checked").prop("checked", false);
                 updateHiddenTagFieldsFromUI();
@@ -1642,6 +1647,7 @@
             } else {
                 window.location.href = qp;
             }
+            */
         }
 
         function setup_and_launch_save_warning() {
